--- a/buildenv/jenkins/common/build
+++ b/buildenv/jenkins/common/build
@@ -43,7 +43,9 @@ def get_source() {
             OMR_BRANCH_OPTION = (OMR_BRANCH != "")? "-omr-branch=${OMR_BRANCH}" : ""
             OMR_SHA_OPTION = (OMR_SHA != "") ? "-omr-sha=${OMR_SHA}" : ""
 
-            if (USER_CREDENTIALS_ID != '') {
+	    // use sshagent with Jenkins credentials ID for all platforms except zOS
+            // on zOS use the user's ssh key
+            if (!SPEC.startsWith('zos') && (USER_CREDENTIALS_ID != '')) {
                 get_sources_with_authentication()
             } else {
                 get_sources()
@@ -59,6 +61,13 @@ def get_sources_with_authentication() {
 }
 
 def get_sources() {
+    // use credentials ID for all platforms except zOS
+    // for zOS use ssh key
+    def remote_config_parameters = [url: "${OPENJDK_REPO}"]
+    if (!SPEC.startsWith('zos') && USER_CREDENTIALS_ID) {
+        remote_config_parameters.put(credentialsId: "${USER_CREDENTIALS_ID}")
+    }
+    
     checkout changelog: false,
             poll: false,
             scm: [$class: 'GitSCM',
@@ -72,8 +81,7 @@ def get_sources() {
                                 shallow: false,
                                 timeout: 30]],
                 submoduleCfg: [],
-                userRemoteConfigs: [[credentialsId: "${USER_CREDENTIALS_ID}",
-                                    url: "${OPENJDK_REPO}"]]]
+                userRemoteConfigs: [remote_config_parameters]]
 
     // Check if this build is a PR
     if (params.ghprbGhRepository) {
@@ -267,7 +275,9 @@ def archive() {
               sh "tar -C ${buildDir} -zcvf ${SDK_FILENAME} ${JDK_FOLDER}"
               // test if the test natives directory is present, only in JDK11+
               sh "if test -d ${buildDir}${testDir}; then tar -C ${buildDir} -zcvf ${TEST_FILENAME} ${testDir} --transform 's,${testDir},native-test-libs,'; fi"
-              if (ARTIFACTORY_SERVER) {
+              // TODO: to determine which artifactory server and/or path to use for zOS
+              // skip upload for zOS platform
+              if (!SPEC.startsWith('zos') && ARTIFACTORY_SERVER) {
                 def server = Artifactory.server ARTIFACTORY_SERVER
                 // if the archive location is modified the definition of CUSTOMIZED_SDK_URL will also need to be updated
                 def uploadSpec = """{
@@ -316,11 +326,11 @@ def build_all() {
             }
         } finally {
             try {
-		cleanWs()
+	      cleanWs()
 	    } catch(e) {
-		echo e.toString()
-		echo e.printStackTrace()
-		sh "ps -ef"
+	        echo e.toString()
+	        echo e.printStackTrace()
+	        sh "ps -ef"
 	    }
         }
     }
