--- a/buildenv/jenkins/common/build
+++ b/buildenv/jenkins/common/build
@@ -255,6 +255,7 @@ def build() {
     stage('Compile') {
         timestamps {
             withEnv(BUILD_ENV_VARS_LIST) {
+	        sh "printenv"
                 sh "${BUILD_ENV_CMD} bash configure --with-freemarker-jar='$FREEMARKER' --with-boot-jdk='$BOOT_JDK' $EXTRA_CONFIGURE_OPTIONS && make $EXTRA_MAKE_OPTIONS all"
             }
         }
@@ -326,7 +327,7 @@ def build_all() {
             }
         } finally {
             try {
-	      cleanWs()
+	      //cleanWs()
 	    } catch(e) {
 	        echo e.toString()
 	        echo e.printStackTrace()
